<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ssptv">Places to Visit</string>

    <string name="sspap">Add Place</string>

    <string name="parse_app_id">7iK0Bn784yxcqTW5adwu5IXnmfbMG71dutWxe7c9</string>
    <string name="parse_client_id">LGl5KiaWqtw4j16Lf1mQVUEKKBwbSVOb8O6tfF3L</string>

    <string name="title_activity_sign_up_or_log_in">SignUpOrLogInActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">The world is your wall</string>
    <string name="title_activity_settings">Settings</string>
    <string name="feet_250">250 feet</string>
    <string name="feet_1000">1000 feet</string>
    <string name="feet_4000">4000 feet</string>
    <string name="search_distance">Search Distance</string>
    <string name="log_out">Log out of Anywall</string>
    <string name="post">Post</string>
    <string name="post_out_of_range">Can\'t view post! Get closer.</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>

    <string name="prompt_email">Your Email</string>
    <string name="prompt_mob">Mobile Number</string>
    <string name="prompt_done">Done</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_up">New here ? Sign Up</string>

    <string name="prompt_reg">Register</string>
    <string name="prompt_password_again">Password Again</string>
    <string name="action_sign_in_register"><b>Sign In</b> or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_forgot_password">Recover lost password</string>
    <string name="login_progress_signing_in">Signing in&#8230;</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_intro">"Please "</string>
    <string name="error_blank_username">enter a username</string>
    <string name="error_blank_email">enter a email</string>
    <string name="error_blank_phone">enter a phone</string>
    <string name="error_blank_password">enter a password</string>
    <string name="error_mismatched_passwords">enter the same password twice</string>
    <string name="error_join">", and "</string>
    <string name="error_end">.</string>
    <string name="app_name1">Location</string>

    <string name="menu_settings">Settings</string>
    <string name="plan">Plan a trip</string>
    <string name="dp">Discover Places</string>

    <string name="bea">Be a</string>
    <string name="beat">traveller</string>
    <string name="bent">not a tourist...</string>
    <string name="str_atv_places">Enter Place Here</string>


    <string name="ssf">Starting From</string>
    <string name="sgt">Going To</string>
    <string name="strv">Travellers</string>
    <string name="sso">Start On</string>
    <string name="seo">Ends On</string>
    <string name="spn">Plan Now</string>
    <string name="snn">1</string>
    <string name="ssd">December 03 2015</string>
    <string name="sse">December 06 2015</string>

    <string name="slo">LOGOUT</string>






</resources>
