<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/bgg" >
<EditText
        android:id="@+id/editText_fname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:textColor="#FFFFFF"
        android:maxLength="20" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_fname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="#FFFFFF"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress" />
    
    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:maxLength="10"
        android:hint="@string/prompt_mob"
        android:textColor="#FFFFFF"
        android:ems="10"
        android:inputType="phone"
        android:layout_below="@+id/editText_email"
        android:layout_alignLeft="@+id/editText_last_name"
        android:layout_alignStart="@+id/editText_last_name">

        <requestFocus />
    </EditText>
    
    

    <EditText
        android:id="@+id/editText_last_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"       
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"

        android:hint="@string/prompt_password"
        android:layout_below="@id/editText_phone"
        android:textColor="#FFFFFF"
        android:inputType="textPassword"
        android:maxLength="10" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_last_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="#FFFFFF"
        android:hint="@string/prompt_password_again"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/editText_last_name"
        android:layout_below="@id/etPasswordConfirm"
        android:layout_marginTop="25dp"
        android:background="#AB47BC"

        android:text="@string/prompt_reg" />




</RelativeLayout>