<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/LoginFormContainer"
            android:orientation="vertical"
            android:background="@drawable/bgg">



            <EditText
                android:id="@+id/useremail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#FFEBEE"  
                android:hint="@string/prompt_username"
                android:layout_marginTop="70dp"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:textAlignment="center"
                 android:textColor="#FFEBEE"  
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
            
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/sign_in_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="11dp"
                android:background="#AB47BC"
                android:text="@string/log_in" />

            <Button
                android:id="@+id/register_button" 
                android:layout_width="fill_parent"           
                android:layout_height="55dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center_horizontal"  
                android:onClick="register"
                android:text="@string/prompt_up" />


         
            
            

</LinearLayout>