<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="2dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="20dp"
            android:layout_marginLeft="2dp"
            android:layout_height="20dp"
            android:layout_marginTop="25px"
            android:src="@drawable/direction_icon" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="33dp"
            android:text="@string/ssf"
            android:clickable="true"
            android:onClick="sourceclick"
             />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="54dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView1"
            android:layout_marginTop="22dp"
            android:clickable="true"
            android:onClick="sourceclick"
            android:maxLength="36"
            android:text="@string/sspap"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl2"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl1"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="20dp"
            android:layout_marginLeft="2dp"
            android:layout_height="20dp"
            android:layout_marginTop="25px"
            android:src="@drawable/direction_icon1" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="33dp"
            android:clickable="true"
            android:onClick="destclick"
            android:text="@string/sgt" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="54dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:clickable="true"
            android:layout_marginTop="22dp"
            android:onClick="destclick"
            android:maxLength="36"
            android:text="@string/sspap"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl4"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:orientation="vertical"
        android:layout_below="@+id/rl2">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="30dp"
            android:layout_marginLeft="0dp"
            android:layout_height="30dp"
            
            android:layout_marginTop="20px"
            android:src="@drawable/direction_icon3" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="33dp"
            android:clickable="true"
            android:onClick="show"
            android:text="@string/strv" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="54dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView7"
            android:clickable="true"
            android:layout_marginTop="22dp"
            android:onClick="show"
            android:text="@string/snn"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/rl5"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl4"
        android:orientation="vertical" >

       

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="54dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/button1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="26dp"
            android:textColor="#FFFFFF"
        android:background="#BA68C8"
            android:text="@string/ssd" />

        <TextView
            android:id="@+id/starton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button1"
            android:layout_alignBottom="@+id/button1"
            android:layout_marginLeft="23dp"
            android:layout_toRightOf="@+id/imageView5"
            android:text="@string/sso" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="2dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/direction_icon4" />
    
    </RelativeLayout>
    
    
    <RelativeLayout
        android:id="@+id/rl6"
        android:layout_width="wrap_content"
        android:layout_height="58dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl5"
        android:orientation="vertical" >

       

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="54dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:id="@+id/button2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="26dp"
            android:textColor="#FFFFFF"
            android:background="#BA68C8"
            android:text="@string/sse" />

        <TextView
            android:id="@+id/endson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/button2"
            android:layout_alignBottom="@+id/button2"
            android:layout_marginLeft="23dp"
            android:layout_toRightOf="@+id/imageView6"
            android:text="@string/seo" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/direction_icon5" />
    
    </RelativeLayout>

    <TextView
        android:id="@+id/btv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="67dp"
        android:text="..." />

    <Button
        android:id="@+id/plannow"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="3dp"
        android:onClick="plan"
        android:textColor="#FFFFFF"
        android:background="#AB47BC"
        android:text="@string/spn" />
    

</RelativeLayout>